Fixing the cursor problem on mobile devices.

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -5,3 +5,15 @@
         @content;
     }
 }
+
+@mixin mobile-only {
+    @media (pointer: none) and (max-width: 810px) {
+        @content;
+    }
+}
+
+@mixin hoverNot-mobile {
+    @media (hover: hover) and (pointer: fine) {
+        @content;
+    }
+}
